--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,21 @@
 __pycache__/*
 *.zip
 *.log
+test.py
+
+# Skill icons
+*.png
+
+# Imported libraries
+boto/*
+boto-2.48.0.dist-info/*
+certifi/*
+certifi-2018.1.18.dist-info/*
+chardet/*
+chardet-3.0.4.dist-info/*
+idna/*
+idna-2.6.dist-info/*
+requests/*
+requests-2.18.4.dist-info/*
+urllib3/*
+urllib3-1.22.dist-info/*
