Ignore further CLI utilities

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/*
 *.zip
 *.log
 dotest.cmd
+testkeene.cmd
+uploaddevices.cmd
+uploadusers.cmd
 keene-ir-dev.csv
 userDetails.json
 userDetails.py
